[gd_scene load_steps=2 format=2]

[ext_resource path="res://MessageSender/MessageSender.gd" type="Script" id=2]

[node name="MessageSender" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageInput" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -24.0
margin_right = 200.0
margin_bottom = 24.0
align = 1
placeholder_text = "Enter Message to Send"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = 50.0
margin_right = 110.0
margin_bottom = 94.0
text = "Send Message"

[node name="ReceivedMessage" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_top = 300.0
margin_right = 250.0
margin_bottom = 348.0
text = "Message From Other Players"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
